# Redactx---Check-phone-email-tex-in-VietNam-using-Python-FastAPI-...

./: api.py  cli.py  pyproject.toml  readme.md  requirements.txt  scanner.py
patterns/: __init__.py  cccd_vn.py  credit_card.py  email.py  ip_url.py  phone_vn.py  registry.py
redactx/: api.py
redactx/patterns/: registry.py
sample/: data.txt
test/: test_cli_smoke.py  test_patterns.py
