[project]
name = "redactx"
version = "0.1.0"
description = "Scan & redact sensitive data using advanced regex. CLI + API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "black>=24"]

[project.scripts]
redactx = "redactx.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
